# InbentoSolver

./: README.md  main.py  pyproject.toml  requirements.txt
inbento_solver/: __init__.py  board.py  direction.py  level.py  main.py  move.py  solver.py  tiles.py  utils.py
inbento_solver/data/: level011.json  level012.json  level013.json  level014.json  level015.json  level016.json  level017.json  level018.json  level019.json  level021.json  level022.json  level023.json  level024.json  level025.json  level026.json  level027.json  level028.json  level029.json  level031.json  level032.json  level033.json  level034.json  level035.json  level036.json  level037.json  level038.json  level039.json  level041.json
inbento_solver/moves/: __init__.py  base.py  literal.py  shift.py  swap.py
