[project]
name = "InbentoSolver"
version = "0.0.0"
description = "Solves a given puzzle from the game Inbento."
authors = [ {name = "Brian Wang", email = "bwang1008@gmail.com"} ]
requires-python = ">= 3.8"
dependencies = [
	"loguru",
	"mypy",
	"pre-commit",
	"ruff",
	"uv",
]

[tool.ruff]
# See https://docs.astral.sh/ruff/configuration/
exclude = [
	".git",
	".mypy_cache",
	".pytest_cache",
	".ruff_cache",
	".venv",
]

line-length = 88
indent-width = 4

target-version = "py38"

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
# and "ruff linter -v"
select = [
	"F",	# Pyflakes
	"E",	# pycodestyle
	"W",	# pycodestyle
	"C90",	# mccabe
	"I",	# isort
	"N",	# pep8-naming
	"D",	# pydocstyle
	"UP",	# pyupgrade
	"YTT",	# flake8-2020
	"ANN",	# flake8-annotations
	"ASYNC",		# flake8-async
	"TRIO",	# flake8-trio
	"S",		# flake8-bandit
	"BLE",	# flake8-blind-except
	"B",		# flake8-bugbear
	"A",		# flake8-builtins
	"COM",	# flake8-commas
	"C4",	# flake8-comprehensions
	"DTZ",	# flake8-datetimez
	"T10",	# flake8-debugger
	"EM",	# flake8-errmsg
	"EXE",	# flake8-executable
	"FA",	# flake8-future-annotations
	"ISC",	# flake8-implicit-str-concat
	"ICN",	# flake8-import-conventions
	"LOG",	# flake8-logging
	"INP",	# flake8-no-pep420
	"PIE",	# flake8-pie
	"T20",	# flake8-print
	"PYI",	# flake8-pyi
	"PT",	# flake8-pytest-style
	"Q",		# flake8-quotes
	"RSE",	# flake8-raise
	"RET",	# flake8-return
	"SLF",	# flake8-self
	"SLOT",	# flake8-slots
	"SIM",	# flake8-simplify
	"TID",	# flake8-tidy-imports
	"TCH",	# flake8-type-checking
	"INT",	# flake8-gettext
	"ARG",	# flake8-unused-arguments
	"PTH",	# flake8-use-pathlib
	"TD",	# flake8-todos
	"FIX",	# flake8-fixme
	"ERA",	# eradicate
	"PD",	# pandas-vet
	"PGH",	# pygrep-hooks
	"PL",	# Pylint
	"R",		# Refactor
	"TRY",	# tryceratops
	"FLY",	# flynt
	"NPY",	# NumPy-specific rules
	"AIR",	# Airflow
	"PERF",	# Perflint
	"FURB",	# refurb
	"RUF",	# Ruff-specific rules
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
