[project]
name = "InbentoSolver"
version = "0.0.0"
description = "Solves a given puzzle from the game Inbento."
authors = [ {name = "Brian Wang", email = "bwang1008@gmail.com"} ]
requires-python = ">= 3.8"
dependencies = [
	"loguru",
	"mypy",
	"pre-commit",
	"ruff",
	"typing-extensions",
	"typer",
	"uv",
]

[tool.ruff]
# See https://docs.astral.sh/ruff/configuration/
exclude = [
	".git",
	".mypy_cache",
	".pytest_cache",
	".ruff_cache",
	".venv",
]

line-length = 88
indent-width = 4

target-version = "py38"

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
# and "ruff linter -v"
select = [
	"F",    # Pyflakes
	"E",    # pycodestyle
	"W",    # pycodestyle
	"I",    # isort
	"D",    # pydocstyle
	"UP",   # pyupgrade
	"YTT",  # flake8-2020
	"ANN",  # flake8-annotations
	"A",    # flake8-builtins
	"C4",   # flake8-comprehensions
	"FA",   # flake8-future-annotations
	"Q",    # flake8-quotes
	"RSE",  # flake8-raise
	"RET",  # flake8-return
	"SLF",  # flake8-self
	"SIM",  # flake8-simplify
	"TID",  # flake8-tidy-imports
	"TCH",  # flake8-type-checking
	"INT",  # flake8-gettext
	"ARG",  # flake8-unused-arguments
	"PTH",  # flake8-use-pathlib
	"ERA",  # eradicate
	"PGH",  # pygrep-hooks
	"PL",   # Pylint
	"R",    # Refactor
	"RUF",  # Ruff-specific rules
]
ignore = [
	"D203", # one-blank-line-before-class incompatible with D211
	"D213", # multi-line-summary-second-line incompatible with D212
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
